--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                 Happy birthday to youu!! Semoga diberi umur panjang yang berkah yaa. Diberi kesehatan selalu biar tidak sakit soalnya aku gamau kalo kamu sakittt. 
                 Semoga juga nanti rejeki kamu dilancarkan yaa dek, ga cuma rejeki tapi segala urusan kamuu dilancarkan. Banyak hal baik dateng ke kamu kedepannya nanti. 
                 Pokoknya aku selalu berdoa apapun itu yang terbaik buat kamu. Inget yaa, kamu gaboleh ngrasa sendiriann. Ada Mas disini yang siap nemenin kamu kapan aja
-                walaupun terpisah jarak. Ada Mas juga disini yang SAYANGGGG BANGETTT sama kamu. Pokoknya LOVE YOU SO MUCHHHH MWAH <3/
+                walaupun terpisah jarak. Ada Mas juga disini yang SAYANGGGG BANGETTT sama kamu. Pokoknya LOVE YOU SO MUCHHHH MWAH MWAH
                 </p>
                 <p class="fake-btn">Send</p>
             </div>
